k8s/kuick-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuick
  namespace: default
  annotations:
    repo_url: https://github.com/simetnicbr/kuick
  labels:
    app: kuick
spec:
  selector:
    matchLabels:
      app: kuick
  replicas: 1
  template:
    metadata:
      labels:
        app: kuick
    spec:
      serviceAccountName: kuick
      containers:
        - name: kuick
          image: ghcr.io/simetnicbr/kuick:latest  # NOTE: Public images are not available yet! Use your private registry.
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 512Mi
              cpu: "1"
          ports:
            - containerPort: 8080
              protocol: TCP
