k8s/kuick-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuick
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 8080
      protocol: TCP
  selector:
    app: kuick
